--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
  - name: debug-app
    memory: 64M
    instances: 2
-   command: "./bin/debug_app"
+   command: "./bin/cf_debug_app"
    buildpack: go_buildpack
