--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,7 @@
 applications:
  - name: debug-app
    memory: 64M
+   disk_quota: 100M
    instances: 2
    command: "./bin/cf_debug_app"
    buildpack: go_buildpack
