--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,7 @@ applications:
    memory: 64M
    disk_quota: 100M
    instances: 2
-   command: "./bin/cf_debug_app"
    buildpack: go_buildpack
+   env:
+     GOVERSION: go1.8
+     GOPACKAGENAME: github.com/alext/cf_debug_app
